fix: add clarification on performance impact of heavy calculations in useMemo notes

--- a/Notes/day28_useMemoHook.mdx
+++ b/Notes/day28_useMemoHook.mdx
@@ -6,6 +6,7 @@
 - jo bhi huge calculation honge unhe useMemo() me wrap krnge, isse calculation to slow hoga hi but dusre methods ko affect nahi krega
 - take two buttons which prints odd and even and in first state increment one variable till 1 billion then print odd/even 
     - kya hoga?
+        - entire application will slow down or the browser will hang (depends on the system)
 
 - useMemo():
     - ek sada pyaaj saraa container ko sada deta hai, useMemo() removes that rot pyaaj 
